# pyscopinator

./: .gitignore  CLAUDE.md  HARDWARE_TESTS.md  README.md  publish.py  pyproject.toml  run_hardware_tests.sh  test_streaming_reconnect.py
docs/: LOGGING.md
src/scopinator/cli/: interactive_simple.py  main.py  repl_enhanced.py
src/scopinator/cli/commands/: discovery.py
src/scopinator/seestar/: client.py  connection.py  imaging_client.py  rtspclient.py
tests/: README_HARDWARE_TESTS.md  run_hardware_tests.sh  test_connection_protocol.py  test_hardware_integration.py  test_hardware_resilience.py  test_hardware_restart.py  test_hardware_restart_clean.py  test_imaging_client.py  test_integration_mock.py  test_seestar_client.py  test_seestar_client_fixed.py  test_seestar_integration.py
