[project]
name = "scopinator"
version = "0.1.0"
authors = [
    { name = "Steven", email = "erewhon@flatland.org" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/astrophotograph/scopinator"

[tool.uv]
package = true

