[project]
name = "scopinator"
version = "0.2.0"
authors = [
    { name = "Steven", email = "erewhon@flatland.org" }
]
description = "A library for controlling telescopes (initially Seestars)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
dependencies = [
    "click>=8.1.0,<8.2",
    "click-repl>=0.3.0",
    "click-completion>=0.5.2",
    "pydantic>=2.0.0",
    "loguru",
    "beartype",
    "pydash",
    "tzlocal",
]

[project.scripts]
scopinator = "scopinator.cli.main:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/astrophotograph/pyscopinator"

[tool.uv]
package = true
